--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "vue",
     "preview"
   ],
-  "license": "MIT",
+  "main": "dist/library.js",
+  "module": "dist/library.mjs",
   "files": [
-    "dist"
+    "dist/*"
   ],
+  "license": "MIT",
   "scripts": {
     "dev": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "rollup -c",
     "build-library": "vue-cli-service build --target lib --name vue-file-upload-preview ./src/main-entry.js",
     "lint": "vue-cli-service lint"
   },
-  "main": "/dist/vue-file-upload-preview.common",
   "dependencies": {
     "core-js": "^3.6.5",
     "vue": "^3.0.0"
@@ -36,7 +37,11 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "rollup": "^2.70.1",
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-vue": "^6.0.0"
   },
   "eslintConfig": {
     "root": true,
